Enhance authentication flow