@@ -1,26 +1,28 @@
-package org.monjasa.projectclinica.model;
+package org.monjasa.projectclinica.security.userdetails;
 
 import lombok.Builder;
 import lombok.Getter;
+import org.apache.commons.lang3.RandomStringUtils;
+import org.monjasa.projectclinica.model.MainUser;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 @Getter
 @Builder
-public class CustomUserDetails implements OAuth2User, UserDetails {
+public class ApplicationUserDetails implements OAuth2User, UserDetails {
 
-    public static CustomUserDetails of(MainUser mainUser) {
-        return CustomUserDetails.builder()
+    public static ApplicationUserDetails of(MainUser mainUser) {
+        return ApplicationUserDetails.builder()
                 .id(mainUser.getId())
                 .email(mainUser.getEmail())
-                .password("")
-                .authorities(Collections.emptyList())
-                .attributes(Collections.emptyMap())
+                .password(RandomStringUtils.randomAlphanumeric(16))
+                .authorities(List.of(new SimpleGrantedAuthority("DEFAULT_AUTHORITY")))
                 .build();
     }
 
